Update BlacklistFilter.java
ChatGPT'd it